After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 611203 - Fix problems on destruction
Fix problems on destruction
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks: 597983
 
 
Reported: 2010-02-26 17:53 UTC by Owen Taylor
Modified: 2010-03-02 21:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix problems on destruction (5.44 KB, patch)
2010-02-26 17:53 UTC, Owen Taylor
committed Details | Review

Description Owen Taylor 2010-02-26 17:53:40 UTC
StLabel StTooltip: we need to unparent the child, not destroy
  it since Clutter is buggy when destroying actors not in
  a ClutterContainer and leaks them.

StScrollBar: Be robust against being disposed multiple times,
  which can happen, and in fact, normally happens when destroying
  the parent.

StScrollView: Implement remove() for the hscroll and vscroll members,
  and just destroy them in dispose() and let them be removed.
  unparent the shadows, instead of just unref'ing them directly.
Comment 1 Owen Taylor 2010-02-26 17:53:42 UTC
Created attachment 154776 [details] [review]
Fix problems on destruction
Comment 2 Colin Walters 2010-02-26 20:04:01 UTC
Review of attachment 154776 [details] [review]:

I guess my main question here is how likely is it that a clutter patch for this will land anytime soon?  If so it seems cleaner to just depend on that.
Comment 3 Emmanuele Bassi (:ebassi) 2010-03-02 20:44:12 UTC
FYI, clutter 1.2.0 has been released with that patch.
Comment 4 Owen Taylor 2010-03-02 21:38:15 UTC
Committed without the unparent => destroy changes. We'll leak for now and be OK after we switch to clutter-1.2.

Attachment 154776 [details] pushed as 6423cbf - Fix problems on destruction